--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/cypress": "^1.1.3",
+    "cypress": "^12.13.0"
   }
 }
