--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "types":["cypress","node"],
     "lib": [
       "dom",
       "dom.iterable",
@@ -20,8 +21,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": [
-    "src",
-    "cypress.d.ts"
-  ]
+  "include": ["./src", "cypress.d.ts"]
 }
