--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "types":["cypress","node"],
+    "types":["cypress"],
     "lib": [
       "dom",
       "dom.iterable",
